@@ -1,3 +1,8 @@
+2010-03-30  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>
+
+	* tag V00-07-00
+	* add jet_inspect_profiles_x tool
+
 2010-03-24  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>
 
 	* tag V00-06-00
